--- a/index.html
+++ b/index.html
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/styles/styles.css" />
     <title>TiendaWeb</title>
   </head>
   <body>
     <header>
       <!-- Colocar el logo, buscador y login -->
+      <div>
+        <img src="./assets/img/Vector.svg" alt="logo" />
+        <img src="./assets/img/AluraGeek-1.svg" alt="logo2" />
+        <img src="./assets/img/AluraGeek.svg" alt="logo3" />
+        <input class="header-search" type="search" placeholder="¿Que deseas buscar?" />
+      </div>
+      <input class="btn-login" type="button" value="Login" />
     </header>
     <main>
-      <section>
+      <section class="banner">
         <!-- Colocar el banner con los descuentos  -->
+        <!-- <div>
+          <img src="./assets/img/banner.jpg" alt="banner" />
+        </div> -->
       </section>
       <section>
         <!-- Colocar la galería de productos -->
       </section>
     </main>
     <footer>
-      <!-- Colocar un formulario de contacto -->
+      <!-- Colocar logo y un formulario de contacto -->
+      <div>
+        <!-- Logo -->
+      </div>
+      <div>
+        <!-- Formulario -->
+      </div>
     </footer>
   </body>
 </html>
