banner completado, galería de cards en proceso

--- a/index.html
+++ b/index.html
@@ -21,12 +21,38 @@
     <main>
       <section class="banner">
         <!-- Colocar el banner con los descuentos  -->
-        <!-- <div>
-          <img src="./assets/img/banner.jpg" alt="banner" />
-        </div> -->
+        <div class="text-banner">
+          <h2>Febrero Promocional</h2>
+          <p>Productos seleccionados con 33% de descuento</p>
+          <input type="button" value="Ver Consolas" />
+        </div>
       </section>
       <section>
         <!-- Colocar la galería de productos -->
+
+        <!-- Galería categoría StarWars -->
+        <div class="toolba-gallery">
+          <h2>Star Wars</h2>
+          <div>
+            <a href="#">Ver todo</a>
+            <img src="" alt="arrow" />
+          </div>
+        </div>
+        <div class="cards">
+          <!-- Aquí vam todas las card de la categoría -->
+          <div class="card">
+            <img src="#" alt="thumbnail card" />
+            <p>Producto XYZ</p>
+            <p>$ 600</p>
+            <a href="#">Ver producto</a>
+          </div>
+        </div>
+        <div>
+          <!-- Galería categoría Consolas -->
+        </div>
+        <div>
+          <!-- Galería categoría Diversos -->
+        </div>
       </section>
     </main>
     <footer>
