menu admin completado

--- a/index.html
+++ b/index.html
@@ -123,5 +123,6 @@
       <p>Desarrollado por Luis Mera</p>
       <p>2022</p>
     </div>
+    <script src="./assets/js/index.js"></script>
   </body>
 </html>
