--- a/pages/adminMenu.html
+++ b/pages/adminMenu.html
@@ -23,13 +23,16 @@
       </div>
       <input class="btn-login" type="button" value="Login" />
     </header>
-    <main class="main-login">
+    <main class="main-admin">
         <!-- Formulario de login -->
         <h2>Agregar un producto nuevo</h2>
         <form >
-            <input type="email" placeholder="Escriba su correo electrónico">
-            <input type="text" placeholder="Escriba su contraseña">
-            <button>Entrar</button>
+            <input type="text" placeholder="URL de imagen">
+            <input type="text" placeholder="Categorías">
+            <input type="text" placeholder="Nombre del producto">
+            <input type="number" placeholder="Precio del producto">
+            <textarea id="" cols="30" rows="10" placeholder="Descripción del producto"></textarea>
+            <button>Agregar producto</button>
         </form>
     </main>
     <footer>
